# holistic-dna-analyzer

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_CHECKLIST.md  README.md  config.yaml.example  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
dashboard/: app.py  subject_selector.py
dashboard/pages/: 1_profile.py  2_panels.py  3_findings.py  4_explorer.py  5_compare.py
data/panels/: addiction.experimental.yaml  adhd_neurodivergence.experimental.yaml  autism_spectrum.experimental.yaml  cardiovascular.experimental.yaml  cardiovascular.yaml  cognitive.experimental.yaml  cognitive.yaml  health_over50.experimental.yaml  inflammation.yaml  mental_health.experimental.yaml  mental_health.yaml  nutrigenomics.yaml  nutrition_advanced.yaml  nutrition_metabolism.yaml  nutrition_micronutrients.yaml  pharmacogenomics.yaml  sleep.experimental.yaml  sleep.yaml  traits.yaml  wellness.experimental.yaml  wellness.yaml
data/sources/: dna-example.csv
docs/: BACKUP_AND_PRIVACY.md  CONTEXT_SCHEMA.md  PANEL_LLM_WORKFLOWS.md  PANEL_REVIEW_WORKFLOW.md  PANEL_SCHEMA.md  PYTHON_API.md
src/dna/: __init__.py  cli.py
src/hda/: __init__.py  cli.py  config.py  context_audit.py  context_documents.py  context_migrator.py  (+3 more)
tests/: test_agent_api.py  test_annotator.py  test_cli.py  test_compare_tools.py  test_context_documents.py  test_context_migrator.py  test_context_store.py  test_context_validator.py  test_dashboard_subject_selector.py  test_doctor_report.py  test_importer.py  test_panel_regressions.py  test_panels_metadata.py  test_subject_isolation.py
(+25 files in other folders)
