[project]
name = "dna"
version = "0.1.0"
description = "Personal DNA analysis framework"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.2",
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.40",
    "plotly>=5.24",
]

[project.scripts]
dna = "dna.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dna"]
